--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Run tests with coverage
       run: |
         pytest --cov=common --cov-report=term --cov-report=xml
+        coverage run -m pytest common
 
     - name: Upload coverage report
       uses: actions/upload-artifact@v4
