--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,8 @@ jobs:
 
     - name: Run tests with coverage
       run: |
-        pytest --cov=common --cov-report=term --cov-report=xml
-        coverage run -m pytest common
+        coverage run -m pytest Unit_Test_Cases
+        coverage report -m
 
     - name: Upload coverage report
       uses: actions/upload-artifact@v4
