--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,7 @@ jobs:
 
     - name: Run tests with coverage
       run: |
-        coverage run -m pytest Unit_Test_Cases
-        coverage report -m
+        pytest --cov=common --cov-report=term --cov-report=xml
 
     - name: Upload coverage report
       uses: actions/upload-artifact@v4
